--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,18 +4,15 @@ services:
     image: 'postgres:latest'
     volumes:
       - postgres:/var/lib/postgresql/data
-    environment:
-      POSTGRES_PASSWORD: postgres
-    # env_file:
-    #   - ./env/postgres.env # you can also define env variables like this.
+
   rails:
     build: ./
     ports:
       - '3000:3000'
     volumes:
-      - .:/rails # add our local code to dockerfile
+      - .:/kafka-consumer
     depends_on:
-      - db  # add all dependant container
+      - db
 
 volumes:
-  postgres: # named volume
+  postgres:
