--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
 
   rails:
     build: ./
+    command: bash -c "bundle exec rails s -p 3000 -b '0.0.0.0'"
     ports:
       - '3000:3000'
     volumes:
