--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,14 @@ services:
     image: 'postgres:latest'
     volumes:
       - postgres:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_PASSWORD=postgres
 
   rails:
     build: ./
-    command: bash -c "bundle exec rails s -p 3000 -b '0.0.0.0'"
+    command: bash -c "bundle exec rails s -p 3001 -b '0.0.0.0'"
     ports:
-      - '3000:3000'
+      - '3001:3001'
     volumes:
       - .:/kafka-consumer
     depends_on:
