--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
 
   kafka:
     container_name: kafka
-    image: confluentinc/cp-kafka:7.5.2
+    image: confluentinc/cp-kafka
     ports:
       - 9092:9092
     environment:
@@ -28,6 +28,33 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
 
+  schema-registry:
+    image: confluentinc/cp-schema-registry
+    container_name: schema-registry
+    hostname: schema-registry
+    ports:
+      - 9021:9021
+    environment:
+      SCHEMA_REGISTRY_HOST_NAME: schema-registry
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: 'kafka:9092'
+      SCHEMA_REGISTRY_LISTENERS: 'http://0.0.0.0:9021'
+    depends_on:
+      - kafka
+
+  kafka-ui:
+    container_name: kafka-ui
+    restart: unless-stopped
+    image: 'provectuslabs/kafka-ui:latest'
+    ports:
+      - "8080:8080"
+    depends_on:
+      - kafka
+      - schema-registry
+    environment:
+      - KAFKA_CLUSTERS_0_BOOTSTRAP_SERVERS=kafka:9092
+      - KAFKA_CLUSTERS_0_NAME=kafka-docker-cluster-1
+      - KAFKA_CLUSTERS_0_SCHEMAREGISTRY=http://schema-registry:9021
+
   rails:
     build: ./
     command: /usr/bin/supervisord
@@ -37,7 +64,7 @@ services:
       - .:/kafka-consumer
     depends_on:
       - db
-      - kafka
+      - kafka-ui
 
 volumes:
   postgres:
