--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -30,12 +30,12 @@ services:
     tty: true
     stdin_open: true
     build: ./
-    container_name: kafka-consumer-test
+    container_name: appeals-consumer-test
     command: >
       bash -c "echo \"Test environment is ready!\" && \
                sleep infinity"
     volumes:
-      - .:/kafka-consumer
+      - .:/appeals-consumer
     environment:
       - RAILS_ENV=test
     depends_on:
