APPEALS-37301- added steps to workflow.yml file to see if i can get a passing GHA run

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,7 +9,7 @@ on:
 #  what type of jobs do we need
 #  postgres
 jobs:
-  rake:
+  appeals_consumer_rspec_job:
     runs-on: ubuntu-8-cores-latest
     services:
       postgres:
@@ -17,13 +17,33 @@ jobs:
         env:
           POSTGRES_USER: root
           POSTGRES_PASSWORD: password
-          POSTGRES_DB: caseflow_efolder_test
+          POSTGRES_DB: appeals_consumer_test
 
         ports:
         - 5432:5432
 
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
-
+      redis:
+        image: redis:4.0.10
+        ports:
+        - 6379:6379
+# ruby container 
+    # container:
+    #   image: 008577686731.dkr.ecr.us-gov-west-1.amazonaws.com/gaimg-ruby:2.7.3-ga-browsers
+    #   options: --privileged # Necessary for Rspec to run with our configuration within GHA. Needed for rspec step to prevent chromedriver issue
+    #   credentials:
+    #       username: AWS
+    #       password: ${{ secrets.ECR_PASSWORD }}
+    #   env:
+    #     DBUS_SESSION_BUS_ADDRESS: /dev/null
+    #     RAILS_ENV: test
+    #     BUNDLE_PATH: vendor/bundle
+    #     POSTGRES_HOST: postgres
+    #     POSTGRES_USER: root
+    #     POSTGRES_PASSWORD: password
+    #     WD_INSTALL_DIR: .webdrivers
+    #     CI: true
+    #     REDIS_URL_CACHE: redis://redis:6379/0/cache/
 # kafka container
 # schema-registry container
 # kafka-ui container
@@ -31,3 +51,17 @@ jobs:
 
 # after the jobs setup all the containers 
 # what steps do we need
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Ruby version
+      run: ruby -v
+
+    - name: Configure Bundler
+      run: |-
+        BUNDLER_V=$(cat ./Gemfile.lock | tail -1 | tr -d " ")
+        echo $BUNDLER_V
+        gem install bundler:$BUNDLER_V
+
+    - name: Bundle install
+      run: bundle install --path vendor/bundle
