--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,8 +75,21 @@ services:
       - db
       - kafka-ui
       - redis
+      - localstack
     env_file: 
       - ".env"
+
+  localstack:
+    platform: linux/amd64
+    container_name: localstack
+    image: localstack/localstack:0.11.4
+    ports:
+      - "4567-4583:4567-4583"
+      - "8082:${PORT_WEB_UI-8080}"
+    environment:
+      - SERVICES=sqs
+    volumes:
+      - ./local/sqs/conf:/conf
 
 volumes:
   postgres:
