--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -72,8 +72,10 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v2
 
-    - name: Ruby version
-      run: ruby -v
+    - name: Set up Ruby
+      uses: actions/setup-ruby@v2
+      with:
+        ruby-version: 3.2.2
 
     - name: Configure Bundler
       run: gem install bundler
