added specific ruby-version

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -74,6 +74,8 @@ jobs:
 
     - name: Set up Ruby
       uses: actions/setup-ruby@v1
+      with:
+        ruby-version: 3.2.2
 
     - name: Configure Bundler
       run: gem install bundler
