--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -73,12 +73,12 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Set up Ruby
-      uses: actions/setup-ruby@v1
+      uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 3.2
-        
-    - name: Configure Bundler
-      run: gem install bundler
+        bundler-cache: true
 
-    - name: Bundle install
-      run: bundle install
+    # - name: Configure Bundler
+    #   run: gem install bundler
+
+    # - name: Bundle install
+    #   run: bundle install
