--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -20,7 +20,9 @@ jobs:
         bundler-cache: true
     
     - name: Set up Karafka
-      run: make -f Makefile build registry up
+      run: |
+          touch env
+          make -f Makefile build registry up
         
         
 
