--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,7 +21,7 @@ jobs:
     
     - name: Set up Karafka
       run: |
-          touch env
+          touch .env
           make -f Makefile build registry up
         
         
