use a different wait

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -24,13 +24,8 @@ jobs:
           touch .env
           make -f Makefile build 
 
-    - name: wait for for services to be ready
-      uses: GuillaumeFalourd/wait-sleep-action@v1
-      with:
-        time: '30' # for 60 seconds
-
     - name: make registry
-      run: make -f Makefile registry
+      run: -wait -timeout 30s make -f Makefile registry
         
 
 
