APPEALS-37301- added RSpec Test step, and removed un-needed test code

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -28,6 +28,14 @@ jobs:
       run: |
         sleep 15
         make -f Makefile registry
-        
+    
+    - name: RSpec test
+      run: |
+        make -f Makefile run-test
+
+  
+
+
+
 
 
