--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -29,7 +29,7 @@ jobs:
         sleep 15
         make -f Makefile registry
     
-    - name: RSpec test suite
+    - name: Whole RSpec test suite
       run: |
         make -f Makefile run-test
 
