added SENTRY_DSN to env template

--- a/.env.template
+++ b/.env.template
@@ -2,3 +2,4 @@ KAFKA_CLUSTER=KAFKA_CLUSTER_GOES_HERE
 KAFKA_SCHEMA_REGISTRY=KAFKA_SCHEMA_REGISTRY_GOES_HERE
 KAFKA_USERNAME=KAFKA_USERNAME_GOES_HERE
 KAFKA_PASSWORD=KAFKA_PASSWORD_GOES_HERE
+SENTRY_DSN=SENTRY_DSN_GOES_HERE
