--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,6 @@ supervisord.pid
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Ignore hidden files 
+coverage
