APPEALS-37301- changed verbage for workflow step

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -28,13 +28,9 @@ jobs:
         sleep 15
         make -f Makefile registry
     
-    - name: Whole RSpec test suite
+    - name: Run RSpec test suite
       run: |
         make -f Makefile all-test
-
-  
-
-
 
 
 
