--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.7'
 services:
   db:
     image: 'postgres:latest'
+    container_name: db
     volumes:
       - postgres:/var/lib/postgresql/data
     environment:
@@ -65,6 +66,7 @@ services:
 
   redis:
     image: 'redis:7.0-alpine'
+    container_name: redis
     command: --port 7936
     ports:
       - '7936:7936'
