--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,7 +6,9 @@ AllCops:
   Exclude:
     - 'db/migrate/*'
     - 'db/schema.rb'
+    - 'db/seeds/*'
     - 'config/**/*'
+    - 'vendor/**/*'
   TargetRailsVersion: 5.1
   TargetRubyVersion: 2.5
   UseCache: true
