update workflow path

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Run docker-compose
       uses: hoverkraft-tech/compose-action@v2.0.1
       with:
-        compose-file: "./docker/docker-compose.yml"    
+        compose-file: "../docker-compose.yml"    
     
     - name: Set up Karafka
       run: |
