Update Shoryuken retries to match feature branch changes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,6 +78,7 @@ services:
       - ls
 
   rails:
+    network_mode: "host"
     build: ./
     command: /usr/bin/supervisord
     ports:
@@ -93,8 +94,8 @@ services:
       - ".env"
     dns:
       - 10.0.2.20
-    networks:
-      - ls
+    # networks:
+    #   - ls
 
   localstack-consumer:
     platform: linux/amd64
