Update rubocop to no longer track NumericLiterals

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -134,6 +134,9 @@ Style/FormatStringToken:
   Enabled: true
   EnforcedStyle: annotated
 
+Style/NumericLiterals:
+  Enabled: false
+
 Naming/FileName:
   Enabled: false
 
