Adding convention:Rails/Date to rubocop ignore as this is a false positive per https://stackoverflow.com/questions/15038726/ruby-on-rails-convention-for-naming-date-time-fields

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -137,6 +137,9 @@ Style/FormatStringToken:
 Style/NumericLiterals:
   Enabled: false
 
+convention:Rails/Date:
+  Enabled: false
+
 Naming/FileName:
   Enabled: false
 
